--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
+*{
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  background-color: #6096B4;
+  color: #fff;
+  /* font-family: sans-serif; */
+  margin: 0;
+  padding: 0;
+  font-family: 'Shantell Sans', cursive;
+}
+
+.App{
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 40px;
+  width: 80%;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  background-color:#EEE9DA;
+  padding: 10px;
+  width: 50%;
+  padding: 15px ;
+  font-size: 1.4rem;
+  border-radius: 8px;
+   border: 2px solid #BDCDD6;
+}
+input:hover{
+  box-shadow: 5px 5px 10px 0px #DFFFD8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addbtn{
+  padding: 14px 20px;
+  border: 1px solid black ;
+  background-color: #BDCDD6;
+  /* color: #fff; */
+  font-size: 1.5rem;
+  font-weight: bolder;
+  cursor: pointer;
+  margin: 0px 25px;
+  margin-left: 35px;
+  border-radius: 8px;
+}
+.main-body{
+ /* width: 80%; */
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+
+ gap: 30px;
+
+ /* margin-left: auto; */
+ /* margin-right: auto; */
+}
+
+.list{
+  
+  padding:0px;
+  
+  /* border-radius: 20px; */
+  width: 53%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.task{
+  display: flex;
+  background-color: #BDCDD6;
+  height: 50px;
+  padding: 4px 15px;
+  color: black;
+  margin: 5px;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  border: 2px solid grey;
+  border-radius: 20px;
+  
+  /* background-color: aqua; */
+}
+.task h2{
+  margin: auto 5px;
+}
+.task button{
+    width: 40px;
+    height: 30px;
+    margin: auto 10px;
+    font-size: 1.3rem;
+    border-radius: 8px;
+    /* align-items: center; */
+}
+.buttons{
+  margin-top: auto;
+  margin-bottom: auto;
+  gap: 0px;
 }
